Style: style to mobile view & add icons

--- a/public/emails/email_template.html
+++ b/public/emails/email_template.html
@@ -5,8 +5,11 @@
         <link rel="shortcut icon" href="../assets/images/logo/HomeChow Icon.svg" type="image/x-icon">
         <script src="https://cdn.tailwindcss.com"></script>
     </head>
-    <body class="bg-gray-50">
-        <div class="w-2/3 mx-auto mt-24 bg-white shadow-md overflow-hidden text-center rounded-3xl">
+    <body class="bg-gray-50 pt-28">
+        <div class="flex justify-center">
+            <img src="../assets/svg/Template_bg_mobile.svg" alt="Food" class="w-80">
+        </div>
+        <div class="w-2/3 mx-auto bg-white shadow-md overflow-hidden text-center rounded-3xl mt-[-10%] relative z-10">
             <div class="flex justify-center p-14">
                 <img src="../assets/images/logo/HomeChow_Logo.png" alt="Logo" class="w-32 h-9">
             </div>
@@ -28,15 +31,28 @@
                 </p>
             </div>
             <div class="text-left mt-16 mb-12">
-                <p class="text-black font-normal text-xs leading-5 mx-8">
+                <p class="text-black font-normal text-xs text-center leading-5 mx-8">
                     <b>We’re here for you</b>, if you have any questions or you need an assistance <span class="text-[#FA101D]">just let us know</span>.
                 </p>
             </div>
         </div>
-        <div class="mx-40 my-16 text-center text-xs">
-            <p>
-                3209 Tanner Street, Vancouver, British Columbia, V5R 2T4
-            </p>
+        <div class="bg-gray-300">
+            <div class="mx-40 pt-40 text-center text-xs mt-[-20%]">
+                <p>
+                    3209 Tanner Street, Vancouver, British Columbia, V5R 2T4
+                </p>
+            </div>
+            <div class="flex justify-center gap-6 py-14">
+                <button class="shadow-sm rounded-xl">
+                    <img src="../assets/svg/Icon_facebook.svg" alt="Food" class="w-14">
+                </button>
+                <button class="shadow-sm rounded-xl">
+                    <img src="../assets/svg/Icon_twitter.svg" alt="Food" class="w-14">
+                </button>
+                <button class="shadow-sm rounded-xl">
+                    <img src="../assets/svg/Icon_linkedin.svg" alt="Food" class="w-14">
+                </button>
+            </div>
         </div>
     </body>
 </html>
