--- a/public/emails/email_template.html
+++ b/public/emails/email_template.html
@@ -5,53 +5,61 @@
         <link rel="shortcut icon" href="../assets/images/logo/HomeChow Icon.svg" type="image/x-icon">
         <script src="https://cdn.tailwindcss.com"></script>
     </head>
-    <body class="bg-gray-50 pt-28">
+    <body class="bg-white pt-24">
         <div class="flex justify-center">
-            <img src="../assets/svg/Template_bg_mobile.svg" alt="Food" class="w-80">
+            <img src="../assets/svg/Template_bg_mobile.svg" alt="Food" class="block md:hidden w-80">
+            <img src="../assets/svg/Template_bg_desktop.svg" alt="Food" class="hidden md:block md:w-max md:mr-4">
         </div>
         <div class="w-2/3 mx-auto bg-white shadow-md overflow-hidden text-center rounded-3xl mt-[-10%] relative z-10">
             <div class="flex justify-center p-14">
-                <img src="../assets/images/logo/HomeChow_Logo.png" alt="Logo" class="w-32 h-9">
+                <img src="../assets/images/logo/HomeChow_Logo.png" alt="Logo" class="block md:hidden w-32 h-9">
+                <img src="../assets/images/logo/HomeChow_Logo.png" alt="Logo" class="hidden md:block w-72 h-24">
             </div>
-            <div class="flex justify-center pt-6 pb-4">
-                <img src="../assets/svg/Template_food.svg" alt="Food" class="w-72 h-28">
+            <div class="md:flex md:flex-row-reverse md:justify-center md:items-center md:px-16 md:gap-8 2xl:gap-2">
+                <div class="flex justify-center md:flex-none pt-6 pb-4 md:mx-2">
+                    <img src="../assets/svg/Template_food.svg" alt="Food" class="block md:hidden w-72 h-28">
+                    <img src="../assets/svg/Template_food.svg" alt="Food" class="hidden md:block w-72 h-40">
+                </div>
+                <div class="text-left my-4 md:my-8 md:px-1 2xl:px-14">
+                    <h1 class="text-2xl font-bold mx-8 py-4 md:text-5xl">Welcome Aboard!</h1>
+                    <p class="text-black font-normal text-xs leading-5 mx-8 md:text-xl">
+                        We are thrilled to have you as a new member of our team at <b>Homechow</b>! As a talented chef, we are excited to see the amazing dishes and recipes that you will bring to our platform and help us to achieve our goal of delivering high-quality food experiences to our users.
+                    </p>
+                </div>
             </div>
-            <div class="text-left my-4">
-                <h1 class="text-2xl font-bold mx-8 py-4">Welcome Aboard!</h1>
-                <p class="text-black font-normal text-xs leading-5 mx-8">
-                    We are thrilled to have you as a new member of our team at <b>Homechow</b>! As a talented chef, we are excited to see the amazing dishes and recipes that you will bring to our platform and help us to achieve our goal of delivering high-quality food experiences to our users.
-                </p>
+            <div class="md:flex md:items-center md:px-16 md:my-12 md:gap-8 2xl:gap-2">
+                <div class="flex justify-center py-6">
+                    <img src="../assets/svg/Template_drink.svg" alt="Food" class="block md:hidden w-72 h-28">
+                    <img src="../assets/svg/Template_drink.svg" alt="Food" class="hidden md:block max-w-max h-40 ml-20 2xl:ml-40">
+                </div>
+                <div class="text-left my-4 md:my-8 md:px-10 2xl:px-36">
+                    <p class="text-black font-normal text-xs leading-5 mx-8 md:text-xl">
+                        We are thrilled to have you as a new member of our team at <b>Homechow</b>! As a talented chef, we are excited to see the amazing dishes and recipes that you will bring to our platform and help us to achieve our goal of delivering high-quality food experiences to our users.
+                    </p>
+                </div>
             </div>
-            <div class="flex justify-center py-6">
-                <img src="../assets/svg/Template_drink.svg" alt="Food" class="w-72 h-28">
-            </div>
-            <div class="text-left my-4">
-                <p class="text-black font-normal text-xs leading-5 mx-8">
-                    We are thrilled to have you as a new member of our team at <b>Homechow</b>! As a talented chef, we are excited to see the amazing dishes and recipes that you will bring to our platform and help us to achieve our goal of delivering high-quality food experiences to our users.
-                </p>
-            </div>
-            <div class="text-left mt-16 mb-12">
-                <p class="text-black font-normal text-xs text-center leading-5 mx-8">
+            <div class="text-left mt-16 mb-12 md:mb-20 md:px-44 2xl:px-80">
+                <p class="text-black font-normal text-xs text-center leading-5 mx-8 md:text-xl">
                     <b>We’re here for you</b>, if you have any questions or you need an assistance <span class="text-[#FA101D]">just let us know</span>.
                 </p>
             </div>
         </div>
-        <div class="bg-gray-300">
+        <div class="bg-[#F2F2F2] md:mt-[15%]">
             <div class="mx-40 pt-40 text-center text-xs mt-[-20%]">
-                <p>
+                <p class="text-xs md:text-xl md:mx-80 md:px-20">
                     3209 Tanner Street, Vancouver, British Columbia, V5R 2T4
                 </p>
             </div>
             <div class="flex justify-center gap-6 py-14">
-                <button class="shadow-sm rounded-xl">
+                <a href="https://www.facebook.com" target="_blank" class="shadow-sm rounded-xl">
                     <img src="../assets/svg/Icon_facebook.svg" alt="Food" class="w-14">
-                </button>
-                <button class="shadow-sm rounded-xl">
+                </a>
+                <a href="https://www.twitter.com" target="_blank" class="shadow-sm rounded-xl">
                     <img src="../assets/svg/Icon_twitter.svg" alt="Food" class="w-14">
-                </button>
-                <button class="shadow-sm rounded-xl">
+                </a>
+                <a href="https://www.linkedin.com/company/homechow-ca/mycompany" target="_blank" class="shadow-sm rounded-xl">
                     <img src="../assets/svg/Icon_linkedin.svg" alt="Food" class="w-14">
-                </button>
+                </a>
             </div>
         </div>
     </body>
