Chore: add link to homeChow logo

--- a/public/emails/email_template.html
+++ b/public/emails/email_template.html
@@ -12,8 +12,10 @@
         </div>
         <div class="w-2/3 mx-auto bg-white shadow-md overflow-hidden text-center rounded-3xl mt-[-10%] relative z-10">
             <div class="flex justify-center p-14">
-                <img src="../assets/images/logo/HomeChow_Logo.png" alt="Logo" class="block md:hidden w-32 h-9">
-                <img src="../assets/images/logo/HomeChow_Logo.png" alt="Logo" class="hidden md:block w-72 h-24">
+                <a href="https://homechow.ca" target="_blank">
+                    <img src="../assets/images/logo/HomeChow_Logo.png" alt="Logo" class="block md:hidden w-32 h-9">
+                    <img src="../assets/images/logo/HomeChow_Logo.png" alt="Logo" class="hidden md:block w-72 h-24">
+                </a>
             </div>
             <div class="md:flex md:flex-row-reverse md:justify-center md:items-center md:px-16 md:gap-8 2xl:gap-2">
                 <div class="flex justify-center md:flex-none pt-6 pb-4 md:mx-2">
